--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 	<groupId>net.sf.supercsv</groupId>
 	<artifactId>super-csv-parent</artifactId>
-	<version>2.4.1-SNAPSHOT</version>
+	<version>2.0.2</version>
 	<packaging>pom</packaging>
 	<url>https://github.com/super-csv/super-csv</url>
 	<name>Super CSV</name>
